fixed the media queries. Better performance on mobile. Still debugging iphone landscape.

--- a/sass/_frontpage.scss
+++ b/sass/_frontpage.scss
@@ -87,15 +87,6 @@ header#hero {
 @media (max-width:641px) { 
 
 	header#hero {
-		height:80vh;
-	}
-
-}
-
-/* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
-@media (max-width:481px) { 
-
-	header#hero {
 		height:auto;
 
 		.hero-info {
@@ -103,6 +94,12 @@ header#hero {
 			padding:50px 0;
 		}
 	}
+
+}
+
+/* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
+@media (max-width:481px) { 
+
 }
 
 /* smartphones, iPhone, portrait 480x320 phones */ 
