--- a/sass/_toolbox.scss
+++ b/sass/_toolbox.scss
@@ -1,3 +1,7 @@
+.toolbox:after {
+	content:none;
+}
+
 .toolbox .container {
 	h2 {
 		display:inline-block;
@@ -14,7 +18,7 @@
 		padding:20px;
 		text-align: center;
 
-		display: flex;
+		display:flex;
 		flex-flow:column;
 		
 		.devicon,
